syntax = "proto3";

package kv;

option go_package = "cs426.yale.edu/lab4/kv/proto";

message GetRequest {
	string key = 1;
}

message SetRequest {
	string key = 1;
	string value = 2;
	int64 ttl_ms = 3;
}

message DeleteRequest {
	string key = 1;
}

message MultiSetRequest {
	repeated string key = 1;
	repeated string value = 2;
	int64 ttl_ms = 3;
}

message GetResponse {
	string value = 1;
	bool was_found = 2;
}

message SetResponse {}
message DeleteResponse {}

message MultiSetResponse {
	repeated string failed_keys = 1;
}

message GetShardContentsRequest {
	int32 shard = 1;
}

message GetShardValue {
	string key = 1;
	string value = 2;
	int64 ttl_ms_remaining = 3;
}
message GetShardContentsResponse {
	repeated GetShardValue values = 1;
}

message CreateListRequest {
	string key = 1;
	int64 ttl_ms = 2;
}
message CreateSetRequest {
	string key = 1;
	int64 ttl_ms = 2;
}
message CreateSortedSetRequest {
	string key = 1;
	int64 ttl_ms = 2;
}
message CreateListResponse {}
message CreateSetResponse {}
message CreateSortedSetResponse {}

message AppendListRequest {
	string key = 1;
	string value = 2;
}
message AppendSetRequest {
	string key = 1;
	string value = 2;
}
message AppendSortRequest {
	string key = 1;
	string value = 2;
	int64 rank = 3;
}
message AppendListResponse {}
message AppendSetResponse {}
message AppendSortResponse {}

message GetRangeRequest {
	string key = 1;
	int64 start = 2;
	int64 end = 3;
}
message GetRangeResponse {
	repeated string values = 1;
}

service Kv {
	rpc Get(GetRequest) returns (GetResponse);
	rpc Set(SetRequest) returns (SetResponse);
	rpc Delete(DeleteRequest) returns (DeleteResponse);

	rpc CreateList(CreateListRequest) returns (CreateListResponse);
	rpc CreateSet(CreateSetResponse) returns (CreateSetResponse);
	rpc CreateSortedSet(CreateSortedSetResponse) returns (CreateSortedSetResponse);

	rpc AppendList(AppendListRequest) returns (AppendListResponse);
	rpc AppendSet(AppendSetRequest) returns (AppendSetResponse);
	rpc AppendSort(AppendSortRequest) returns (AppendSortResponse);

	rpc MultiSet(MultiSetRequest) returns (MultiSetResponse);

	rpc GetRange(GetRangeRequest) returns (GetRangeResponse);

	rpc GetShardContents(GetShardContentsRequest) returns (GetShardContentsResponse);
}